Bug 1573337 - remove XBL anon content filtering support from accessible tree traversal r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D42022